iptables
# Generated by iptables-save v1.6.0 on Thu Sep 14 20:16:34 2017
*filter
:INPUT DROP [12:948]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2458:355817]
# Local LAN
-A INPUT -s 192.168.0.0/16 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -j ACCEPT
-A INPUT -s 172.16.0.0/12 -j ACCEPT

# Temporary stuff
-A INPUT -s 95.151.132.113/32 -j ACCEPT


# Zen Office
-A INPUT -s 212.23.9.0/24 -j ACCEPT
# JG Virgin
-A INPUT -s 81.99.249.2/32 -j ACCEPT
-A INPUT -s 86.28.197.153/32 -j ACCEPT
# JG Zen /32
-A INPUT -s 82.69.102.121/32 -j ACCEPT
# Mum Sky
-A INPUT -s 2.221.96.152/32 -j ACCEPT
# Thinkbroadband
-A INPUT -s 80.249.99.160/28 -j ACCEPT
# Teal Linode
-A INPUT -s 139.162.221.47/32 -j ACCEPT
# HTTP traffic
-A INPUT -p tcp --dport 80 -j ACCEPT
# Loopback interface
-A INPUT -i lo -j ACCEPT
# Let related stuff back in
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
COMMIT
